--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Controle de Receitas",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "npm-run-all -p nodemon browsersync",
+    "nodemon": "nodemon server.js",
+    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, views'"
   },
   "author": "Willian Del Freu",
   "license": "ISC",
@@ -13,6 +15,8 @@
     "nunjucks": "^3.2.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "browser-sync": "^2.26.7",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5"
   }
 }
